plugins {
	id 'java'
    id "io.sentry.jvm.gradle" version "6.1.0"
    id 'com.diffplug.spotless' version '8.3.0'
	id 'org.springframework.boot' version '4.0.3'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.security.zap'
description = 'zap-scan'
version = '2.0.0'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

ext {
    lombokVersion = '1.18.42'
}

dependencies {

    annotationProcessor("org.projectlombok:lombok:${lombokVersion}")
    compileOnly("org.projectlombok:lombok:${lombokVersion}")

    implementation("org.postgresql:postgresql:42.7.10")

    implementation("org.zaproxy:zap-clientapi:1.17.0")
    implementation("org.apache.httpcomponents.client5:httpclient5:5.6")

    implementation("org.jsoup:jsoup:1.22.1")
    implementation("io.github.openhtmltopdf:openhtmltopdf-pdfbox:1.1.37")

    implementation("org.springframework.boot:spring-boot-starter-mail")
    implementation("org.springframework.boot:spring-boot-starter-data-jpa")
    implementation("org.springframework.boot:spring-boot-starter-web")
    testImplementation("org.springframework.boot:spring-boot-starter-test")
    implementation("org.springframework.boot:spring-boot-starter-actuator")
}

test {
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
        exceptionFormat "full"
    }
}

spotless {
    java {
        target("src/**/*.java")
        toggleOffOn()
        palantirJavaFormat()
        removeUnusedImports()
        trimTrailingWhitespace()
        leadingSpacesToTabs()
        endWithNewline()
    }
}

tasks.register('generateBuildProperties') {
    doLast {
        def propertyFile = file('build.properties')
        def props = new Properties()
        if (propertyFile.exists()) {
            propertyFile.withReader { props.load(it) }
        }
        props.setProperty('projectName', project.name.toString())
        props.setProperty('releaseDate', new Date().format('yyyy-MM-dd-HH:mm:ss'))
        props.setProperty('projectVersion', version.toString())
        propertyFile.withWriter { props.store(it, null) }
    }
}